--- a/ProAcc/Views/Home/Home.cshtml
+++ b/ProAcc/Views/Home/Home.cshtml
@@ -610,10 +610,14 @@ background-attachment:local, local, scroll, scroll;
                     </tr>*@
                     <tr>
                         <td>
-                            <div class="col-lg-10 text-center ">
-                                <a class="card-title">Assessment</a>
+                            <div class="col-lg-12 text-center" style="width:50%;">
+                               
+                                <div class="col-lg-12 align-content-center" style="margin-left:50%;" >
+                                    <a class="card-title" >Assessment</a>
 
-                                <canvas id="Chart_Assessment"></canvas>
+                                    <canvas id="Chart_Assessment"></canvas>
+                                </div>
+
                             </div>
                         </td>
                         @* <td>
@@ -852,9 +856,6 @@ background-attachment:local, local, scroll, scroll;
 
 </div>
 
-<div>
-
-</div>
 <script>
 	//This Project & Instance
     $("#chart-Assessment").click(
@@ -862,9 +863,9 @@ background-attachment:local, local, scroll, scroll;
             window.location.href = "@Url.Action("ReadinessReport","Assessment")";
         }
     );
-var blue = '#3f6ad8';
-var Yellow = '#f7b924';
-var Green = '#3ac47d';
+    var blue = '#3f6ad8';
+    var Yellow = '#f7b924';
+    var Green = '#3ac47d';
     function Ajax_Donut() {
 
 		$.ajax({
