--- a/ProAcc/Views/Login/Login.cshtml
+++ b/ProAcc/Views/Login/Login.cshtml
@@ -101,7 +101,7 @@
                     <input type="hidden" name="ReturnUrl" value="@Request.QueryString["ReturnUrl"]" />
                     <footer>
                         <a class="Cl_Tagname"><a style="font-size:xx-large;font-weight:600;">ProAcc</a> - <strong>S4/HANA Conversion Tool</strong></a><br />
-                        <a class="copyright" style="color:gray !important;">©Copyright 2020 Promantus Inc.,All Rights Reserved</a>
+                        <a class="copyright" style="color:gray !important;">©Copyright 2020 Promantus Inc,All Rights Reserved</a>
                     </footer>
                 </div>
             </div>
