--- a/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
@@ -6,26 +6,26 @@
 @Styles.Render("~/Content/css/jqGrid")
 @Scripts.Render("~/bundles/Scripts/jqGrid")
 <style>
-    .wrapColumnText
-{
-           white-space: normal !important;
-           height:auto;
-           vertical-align:text-top;
-}
+    .wrapColumnText {
+        white-space: normal !important;
+        height: auto;
+        vertical-align: text-top;
+    }
+
     .fit_Data {
         width: fit-content;
     }
 
     .ui-jqgrid .ui-jqgrid-labels th.ui-th-column {
-    background-color: orange;
-    background-image: none
-}
-     #info_dialog{
+        background-color: orange;
+        background-image: none
+    }
+    #info_dialog{
         margin-left:150vh;
     }
 </style>
 
-    <a class="card-title">Assessment Monitor</a>
+<a class="card-title">Assessment Monitor</a>
 <script>
     //$.jgrid.defaults.width =1000;
     $.jgrid.defaults.responsive = true;
@@ -77,10 +77,10 @@
     }
 
     .ui-jqgrid .ui-jqgrid-labels th.ui-th-column {
-    /*background-color: orange;
+        /*background-color: orange;
     background-image: none*/
-    /*background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);*/
-}
+        /*background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);*/
+    }
 </style>
 <hr />
 <div class="row instanceRow" style="padding: 1em;">
@@ -230,7 +230,7 @@
             }
         });
    });
-    
+
 </script>
 
 <script>
@@ -241,9 +241,9 @@
        // LoadTable(1);
     });
     function LoadTable(Instance) {
-        
+
         $.jgrid.styleUI.Bootstrap.base.rowTable = "table table-bordered";
-    
+
         var Planed_StartDate = function (element, options) {
             var ID = options.rowId;
             $(element).on('keypress', function (e) {
@@ -350,7 +350,7 @@
             });//.datepicker("setDate", new Date());
             // }).datepicker();
         };
-       
+
         $("#jqGrid").jqGrid({
             url: "@Url.Action("GetData","ProjectMonitor",new { Phase_ID= ViewBag.PhaseID})",
             datatype: "json",
@@ -390,7 +390,7 @@
                     cellEdit: true, edittype: 'select', formatter: 'select',
                    editoptions: {
                         value: GetApplicationAreaDropDown()
-                    }                   
+                    }
 
                 },
                 {
@@ -450,16 +450,16 @@
                     editoptions: {
                         dataInit: function (element) {
                             $(element).keyup(function(event) {
-     
+
                                 this.value = this.value
                                   .replace(/[^\d:]/g, '')             // numbers and decimals only
                                   .replace(/(^[\d]{2})[\d]/g, '$1')   // not more than 2 digits at the beginning
                                   .replace(/(\::*)\:/g, '$1')         // decimal can't exist more than once
                                   //.replace(/(\:[\d]{2})./g, '$1');    // not more than 4 digits after decimal
-                                   .replace(/(\:[0-5][0-9]{1})./g, '$1'); 
-                
+                                   .replace(/(\:[0-5][0-9]{1})./g, '$1');
+
                             });
-                            
+
                         }
                     }
                 },
@@ -469,20 +469,20 @@
                     editoptions: {
                          dataInit: function (element) {
                             $(element).keyup(function (event) {
-                                
+
                                 this.value = this.value
                                   .replace(/[^\d:]/g, '')             // numbers and decimals only
                                   .replace(/(^[\d]{2})[\d]/g, '$1')   // not more than 2 digits at th\e beginning
                                   .replace(/(\::*)\:/g, '$1')         // decimal can't exist more than once
                                   //.replace(/(\:[\d]{2})./g, '$1')    // not more than 4 digits after decimal
-                                  .replace(/(\:[0-5][0-9]{1})./g, '$1');  
-                                //.replace(/(^([0-1]?[0-9]|2[0-4]):([0-5][0-9])(:[0-5][0-9]))./g, '$1');    
-                                   
-                
-                            });  
-                           
+                                  .replace(/(\:[0-5][0-9]{1})./g, '$1');
+                                //.replace(/(^([0-1]?[0-9]|2[0-4]):([0-5][0-9])(:[0-5][0-9]))./g, '$1');
+
+
+                            });
+
                         }
-                       
+
                     }
                 },
                 {
@@ -534,15 +534,18 @@
 
                         onEdit: function (rowid) {
                             $("#" + rowid + "_StatusId").addClass("fit_Data");
-                            Show_HideEdit();
-
+                             Show_PMEdit();
                         },
-                       
+
                         editformbutton: false,//Determines if popup should open or not
                         afterSave: function (rowid, response, postdata, options) {
                             Show_HideEdit();
                             $('#jqGrid').trigger( 'reloadGrid' );
                         },
+                        afterRestore: function (rowid) {                            
+                             $('#jqGrid').trigger( 'reloadGrid' );
+                        },
+
                         processing:true
                     }
 
@@ -570,9 +573,9 @@
             sortname: 'SequenceNum',
             sortorder: 'asc',
             onSelectRow: editRow,
-            
+
             serializeRowData: function (postdata) {
-                
+
                 var ColValue = $("#jqGrid").jqGrid('getGridParam', 'selrow');
 
                 var EST_hours = $("#jqGrid").jqGrid('getCell', ColValue, 'EST_hours');
@@ -587,7 +590,7 @@
                 var Dependency = postdata.Dependency;
                 var Pending = postdata.Pending;
                 var Delay_occurred = postdata.Delay_occurred;
-                var StatusId = postdata.StatusId;   
+                var StatusId = postdata.StatusId;
                 var Notes = postdata.Notes;
                 //var EST_hours = EST_hours;
                 //var Planed__St_Date = Planed__St_Date;
@@ -595,12 +598,12 @@
                 var EST_hours;
                 var Actual_St_hours;
                 var Planed__St_Date;
-                var Planed__En_Date;                
+                var Planed__En_Date;
                 var Actual_St_Date;
                 var Actual_En_Date;
                 //if (Notes == "") {
                 //    alert("HI");
-                   
+
                 //}
                  var UserType ="@Session["UserType"].ToString()"
                 if (UserType == 'Project Manager') {
@@ -654,19 +657,20 @@
                                             },
                             success: function (Result) {
                                                  $('#jqGrid').trigger('reloadGrid');
-                                               
+
                                             }
-                                                
+
                                         });
                         // Yes button callbackalert('Thank you.');
                     }, function () {
+                        //$('#jqGrid').trigger( 'reloadGrid' );
                         // No button callbackalert('If you say so...');
                     });
             },
             afterrestorefunc: function (response) {
                 //alert("afterrestorefunc");
     },
-    
+
             loadComplete: function () {
                 //alert("mm");
                 var ids = jQuery("#jqGrid").jqGrid('getDataIDs');
@@ -675,7 +679,7 @@
                     var EST_hours = $('#jqGrid').jqGrid('getCell', ids[i], 'EST_hours')
                     EST_hours = EST_hours.replace(".", ":")
                     $('#jqGrid').jqGrid('setCell', ids[i], 'EST_hours', EST_hours);
-                    
+
                     var Actual_St_hours = $('#jqGrid').jqGrid('getCell', ids[i], 'Actual_St_hours')
                     Actual_St_hours = Actual_St_hours.replace(".", ":")
                     $('#jqGrid').jqGrid('setCell', ids[i], 'Actual_St_hours',Actual_St_hours);
@@ -697,7 +701,7 @@
                 var loginid = '@Session["loginid"]';
                 var ids = jQuery("#jqGrid").jqGrid('getDataIDs');
                 if (User == 'Consultant' || User == 'Customer') {
-                    debugger; 
+                    debugger;
                     for (var i = 0; i < ids.length; i++) {
                         var User_ID = $('#jqGrid').jqGrid('getCell', ids[i], 'UserID')
                         if (User_ID != loginid) {
@@ -707,31 +711,31 @@
                             else {
                                 Notiflix.Notify.Failure("yahoo", { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
                             }
-                           
+
                         }
-                   
+
                     }
                  }*@
 
                 @*var ids = jQuery("#jqGrid").jqGrid('getDataIDs');
                  var UserType ="@Session["UserType"].ToString()"
                 if (UserType == 'Customer' || UserType == 'Consultant') {
-                   // debugger;
+                    debugger;
                     for (var i = 0; i < ids.length; i++) {
                         var a = $('#jEditButton_' + ids[i])
                         //if ($('#jEditButton_' + ids[i]).show() == false) {
-                        //    alert("you got it");                            
+                        //    alert("you got it");
                         //}
                     }
-                    
-                }
+
+                }*@
 
             }
             // set table stripped class in table style in bootsrap
         });
 
         function editRow(id) {
-            //$('#jqGrid').jqGrid('setColProp', 'actions', { editable: false }); 
+            //$('#jqGrid').jqGrid('setColProp', 'actions', { editable: false });
             // var Status_Id = $('#jqGrid').jqGrid('getCell', id, 'StatusId')
             //debugger;
             var UserType = "@Session["UserType"].ToString()"
@@ -770,19 +774,19 @@
 
              //var ids = jQuery("#jqGrid").jqGrid('getDataIDs');
 
-            //            function textReadOnly(cellValue, options, rowdata, action) {
-            //    if (rowdata.stateId == 4) {
-            //        return "<input value='"+ rowdata.stateId +"' readonly='true'></input>";
-            //    } else {
-            //        return "<input value='"+ rowdata.stateId +"'></input>";
-            //    }
-            //}
+//            function textReadOnly(cellValue, options, rowdata, action) {
+//    if (rowdata.stateId == 4) {
+//        return "<input value='"+ rowdata.stateId +"' readonly='true'></input>";
+//    } else {
+//        return "<input value='"+ rowdata.stateId +"'></input>";
+//    }
+//}
             //if (UserType == 'Project Manager')
             //{
             //    //var WIP_Status=false;
             //    for (var i = 0; i < ids.length; i++) {
             //        //var Actions = $('#jqGrid').jqGrid('getCell', ids[i], 'Actions')
-                    
+
             //        $('#jEditButton_' + ids[i]).attr(readonly='true');
             //       // $('#jEditButton_' + ids[i]).prop('readonly', 'readonly');
             //        //$('#jEditButton_' + ids[i]).prop('disabled', 'disabled');
@@ -790,10 +794,10 @@
             //         //$('#jEditButton_' + ids[i]).hide();
             //        //$(this).attr("readonly", false);
             //        //jEditButton_3
-            //    }           
+            //    }
             //}
             //alert(id);
-        
+
         $('#jqGrid').navGrid('#jqGridPager',
             // the buttons to appear on the toolbar of the grid
             { edit: false, add: false, del: false, search: false, refresh: true, view: false, position: "left", cloneToTop: false },
@@ -808,8 +812,8 @@
                   //editParams: myEditOptions,
                 beforeShowForm: function (form) {
 
-                   
-                    
+
+
                 },
                 errorTextFormat: function (data) {
                     alert("in" + data.responseText);
@@ -865,15 +869,24 @@
         );
 
     }
+    function Show_PMEdit() {
+        var selectedRowId = $("#jqGrid").jqGrid('getGridParam', 'selrow');
+         var ids = jQuery("#jqGrid").jqGrid('getDataIDs');
+        var UserType ="@Session["UserType"].ToString()"
+        if (UserType == 'Project Manager') {
+            //debugger;
+            for (var i = 0; i < ids.length; i++) {
+                $('#jEditButton_' + ids[i]).hide();
+            }
+        }
+    }
 
-   
     function Show_HideEdit() {
-        // debugger;
         var ids = jQuery("#jqGrid").jqGrid('getDataIDs');
         var User = '@Session["UserType"]';
         var loginid = '@Session["loginid"]';
         var j = 0;
-
+       
          var UserType ="@Session["UserType"].ToString()"
         if (UserType == 'Project Manager')
         {
@@ -899,52 +912,16 @@
                  }
                 }
             }
-            
+
              var Actual_St_hours = jQuery("#jqGrid").jqGrid('getColProp', 'Actual_St_hours');
                 Actual_St_hours.editable = false;
              var Actual_St_Date = jQuery("#jqGrid").jqGrid('getColProp', 'Actual_St_Date');
                  Actual_St_Date.editable = false;
             var Actual_En_Date = jQuery("#jqGrid").jqGrid('getColProp', 'Actual_En_Date');
-            Actual_En_Date.editable = false;   
-              var Message;
-           for (var i = 0; i < ids.length; i++) {
-               if ($('#jSaveButton_' + ids[i]).is(":visible") == true) {
-                    Notiflix.Confirm.Show('ProAcc Info. Confirm..!',
-                    Message, 'Yes', 'No',
-                    function () {
-                        @*$.ajax({
-                                 type: "POST",
-                                 url: '@Url.Action("SubmitProjectMonitor","ProjectMonitor",new { Phase_ID= ViewBag.PhaseID})',
-                                 data: {
-                                        'Id': "" + Id + "",
-                                        'StatusId': StatusId,
-                                        'Task_Other_Environment': Task_Other_Environment,
-                                         'Dependency': Dependency,
-                                         'Pending': Pending,
-                                         'Delay_occurred': Delay_occurred,
-                                         'EST_hours': EST_hours,
-                                         'Actual_St_hours': Actual_St_hours,
-                                         'Planed__St_Date': Planed__St_Date,
-                                         'Planed__En_Date': Planed__En_Date,
-                                         'Actual_St_Date': Actual_St_Date,
-                                         'Actual_En_Date': Actual_En_Date,
-                                         'Notes': Notes
-                                        },
-                                success: function (Result) {
-                                                 $('#jqGrid').trigger('reloadGrid');
-                                               
-                                            }
-                                                
-                                        });*@
-                        // Yes button callbackalert('Thank you.');
-                    }, function () {
-                        // No button callbackalert('If you say so...');
-                    });
-                   //$('#jEditButton_' + ids[i]).is(":disabled");
-                   $('#jCancelButton_' + ids[i]).click();
-               }
-           }
-            
+            Actual_En_Date.editable = false;
+
+          
+
         }
         else {
             var EST_hours = jQuery("#jqGrid").jqGrid('getColProp', 'EST_hours');
@@ -955,10 +932,11 @@
                 Planed__En_Date.editable = false;
             //debugger;
             for (var i = 0; i < ids.length; i++) {
-               
+
                 var Status_Id = $('#jqGrid').jqGrid('getCell', ids[i], 'StatusId')
                 if (Status_Id == 1|| Status_Id == 2) {
-                    j = i;                   
+                    j = i;
+                    //break;
                 }
                 $('#jEditButton_' + ids[i]).hide();
             }
@@ -987,7 +965,7 @@
                //         if (Status_Id!=4) {
                //             $('#jEditButton_' + ids[j]).hide();
                //         }
-                            
+
                //          }
                //      }
                 }
@@ -1001,9 +979,17 @@
                     if (User_ID != loginid) {
                         $('#jEditButton_' + ids[i]).hide();
                     }
-                   
+
                 }
             }
+        }
+        var a = 0;
+        for (var i = 0; i < ids.length; i++) {
+            if ($('#jEditButton_' + ids[i]).is(":visible")) {a = a + 1;}
+        }
+        //debugger;
+        if (a==0) {
+            Notiflix.Report.Info("ProAcc Info !", "You dont have any Task to Perform");
         }
     }
 
@@ -1042,7 +1028,7 @@
                     contentType: "application/json; charset=utf-8",
                     success: function (Data) {
                         for (var i = 0; i < Data.length; i++) {
-                          
+
                            var obj = {};
                              var ApplicationArea = Data[i].ApplicationArea;
                             var key = ""+Data[i].Id;
@@ -1080,7 +1066,7 @@
 				return Parameters;
 
             }
-   
+
     function GetStatusDropDown() {
     var Parameters = {};
     $.ajax({
