--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -658,7 +658,7 @@
                                         </li>*@
 
                                         <li>
-                                            <a href="@Url.Action("AuditReport", "Report")">
+                                            <a href="@Url.Action("AuditReports", "Report")">
                                                 <i class="metismenu-icon pe-7s-diamond"></i>
                                                 Audit Report
                                             </a>
